--- a/style.css
+++ b/style.css
@@ -1,1 +1,47 @@
-/* nothing here */
+@import url('https://fonts.googleapis.com/css2?family=Karla&family=Spectral:wght@600&display=swap');
+
+
+.read-more {
+    color: #f33;
+    margin-bottom: 80px;
+    text-transform: uppercase;
+    font-size: 16px;
+    letter-spacing: 3px;
+}
+
+body {
+    background-image: url(images/anywhere-workers.gif);
+    background-repeat: no-repeat;
+    background-position: right top;
+    background-size: 700px;
+    font-family: 'Karla', sans-serif;
+    background-color: black;
+    margin: 50px;
+}
+
+h1 {
+    font-size: 120px;
+    color: white;
+    line-height: 130px;
+    margin-bottom: 50px;
+    font-family: 'Spectral', serif;
+}
+
+p {
+    font-size: 20px;
+    color: white;
+    width: 50%;
+    margin-bottom: 40px;
+}
+
+a {
+    background-color: red;
+    padding: 20px 30px;
+    border-radius: 30px;
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 3px;
+}
